config/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  namespace: cavesofsteel
  labels:
    app: web-app
spec:
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: web-app
        image: anyoneas/cavesofsteel
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
