config/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: cavesofsteel
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: web-app
